[package]
name = "rustadup"
version = "0.1.0"
edition = "2018"
description = "Searches the file system for duplicate files in different ways (filename, size, hash, direct file comparison)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
clap = "2"
sha2 = "0.9.8"
digest = "0.9"